--- a/template/css/style.css
+++ b/template/css/style.css
@@ -244,18 +244,25 @@ pre code.sample-request-response-json {
 /* ------------------------------------------------------------------------------------------
  * Sidenav
  * ------------------------------------------------------------------------------------------ */
+ #cmb-article {
+   /*margin: 24px 0px !important;*/
+   top: 18px !important;
+   width: 250px !important;
+   position: fixed !important;
+ }
+
 .sidenav {
   width: 228px;
   margin: 0;
-  padding: 20px;
+  padding: 5px 20px !important;
   position: fixed;
-  top: 0;
+  top: 48px !important;
   left: 0;
   bottom: 0;
   overflow-x: hidden;
   overflow-y: auto;
   background-color: #f5f5f5;
-  z-index: 10;
+  /*z-index: 10 !important;*/
 }
 
 .sidenav > li > a {
